# alloy-ext

./: Cargo.toml  README.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/alloy-ext/: SKILL.md
src/: call_builder.rs  contract_error.rs  error.rs  gas.rs  lib.rs  nonce.rs  pending_tx.rs  provider.rs  recovery.rs
src/test_harness/: error_scenarios.rs  mod.rs  scenario.rs  tests.rs
